Upgrade to VirtualBox 5.0

--- a/templates/virtualbox.erb
+++ b/templates/virtualbox.erb
@@ -1,6 +1,6 @@
 # web
-VBOXWEB_USER=<%= vboxweb_user %>
-VBOXWEB_HOST=<%= vboxweb_host %>
+VBOXWEB_USER=<%= @vboxweb_user %>
+VBOXWEB_HOST=<%= @vboxweb_host %>
 VBOXWEB_LOGFILE=/var/log/vbox/vboxweb.log
 # baloon
 VBOXBALLOONCTRL_USER=$VBOXWEB_USER
