--- a/templates/config.php.erb
+++ b/templates/config.php.erb
@@ -1,7 +1,7 @@
 <?php
 /**
  * phpVirtualBox example configuration. 
- * @version $Id: config.php-example 452 2012-10-17 12:22:12Z imooreyahoo@gmail.com $
+ * @version $Id: config.php-example 585 2015-04-04 11:39:31Z imoore76 $
  *
  * rename to config.php and edit as needed.
  *
@@ -13,7 +13,7 @@ var $username = '';
 var $password = '';
 
 /* SOAP URL of vboxwebsrv (not phpVirtualBox's URL) */
-var $location = '<%= location %>';
+var $location = '<%= @location %>';
 
 /* Default language. See languages folder for more language options.
  * Can also be changed in File -> Preferences -> Language in
@@ -52,16 +52,16 @@ var $servers = array(
 */
 
 // Disable authentication
-var $noAuth = <%= noauth.to_s %>;
+var $noAuth = <%= @noauth.to_s %>;
 
 // Host / ip to use for console connections
-var $consoleHost = '<%= consolehost %>';
+var $consoleHost = '<%= @consolehost %>';
 
 // Disable "preview" box
-var $noPreview = <%= nopreview.to_s %>;
+var $noPreview = <%= @nopreview.to_s %>;
 
 // Default preview box update interval in seconds
-var $previewUpdateInterval = <%= previewupdateinterval %>;
+var $previewUpdateInterval = <%= @previewupdateinterval %>;
 
 // Preview box pixel width
 #var $previewWidth = 180;
@@ -211,6 +211,11 @@ LPT support may or may not work for you.
 */
 #var $enableHDFlushConfig = true;
 
+/*
+ * Event listener timeout in seconds. This is an advanced option that most people will
+ * probably not need to change.
+ */
+#var $eventListenerTimeout = 20;
 
 /* END SETTINGS  */
 
